# chat_server

./: .dockerignore  .env.example  .env.production  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yml
migrations/: 01_create_users_table.sql  02_create_auth_tokens_table.sql  03_create_contacts_table.sql  04_create_conversations_table.sql  05_create_messages_table.sql  06_create_groups_table.sql  07_create_group_members_table.sql  08_create_group_messages_table.sql
src/: main.rs
src/common/: mod.rs  response.rs
src/db/: db.rs  mod.rs
src/logger/: log.rs  mod.rs
src/modules/: mod.rs
src/modules/auth/: controller.rs  middleware.rs  mod.rs  model.rs  repository.rs  services.rs
src/modules/chat/: controller.rs  mod.rs  model.rs  repository.rs
src/modules/contacts/: controller.rs  model.rs  repository.rs
src/modules/users/: controller.rs  mod.rs  model.rs  repository.rs
src/modules/ws/: mod.rs  server.rs  type_def.rs  ws.rs
src/utils/: helpers.rs
