[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# Web Framework
actix-web = "4"
actix-rt = "2"
actix-ws = "0.2"
actix-cors = "0.7"

# Database
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4"] }
tokio = { version = "1", features = ["full"] }

# Authentication & Security
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Environment & Config
dotenv = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures-util = "0.3"
